[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netscan"
version = "0.1.0"
description = "Portable network scanner for macOS and Linux: concurrent ping sweep with latency reporting"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "linusmalbertz" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]
dependencies = []

[project.scripts]
netscan = "netscan.cli:main"

[tool.setuptools]
packages = ["netscan"]
